testing for thread element?

--- a/practicecode.html
+++ b/practicecode.html
@@ -1,6 +1,6 @@
 <html>
     <table>
-        <th></th>
+        <th scope="col">Store #</th>
         <th scope="col">Apples</th>
         <th scope="col">Oranges</th>
         <th scope="col">Bananas</th>
