testing as a long table

--- a/practicecode.html
+++ b/practicecode.html
@@ -1,26 +1,38 @@
 <html>
     <table>
-        <th scope="col">Store #</th>
-        <th scope="col">Apples</th>
-        <th scope="col">Oranges</th>
-        <th scope="col">Bananas</th>
-        <tr>
+        <thread>
+        <th>Store #</th>
+        <th>Apples</th>
+        <th>Oranges</th>
+        <th>Bananas</th>
+        </thread>
+        <tbody>
+            <tr>
             <th scope="row">Store 1</th>
             <td>15</td>
             <td>15</td>
             <td>30</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
             <th scope="row">Store 2</th>
             <td>45</td>
             <td>60</td>
             <td>45</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
             <th scope="row">Store 3</th>
             <td>60</td>
             <td>90</td>
             <td>90</td>
-        </tr>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Totals</td>
+                <td>120</td>
+                <td>165</td>
+                <td>165</td>
+            </tr>
+        </tfoot>
     </table>
 </html>
