Added body and title

--- a/practicecode.html
+++ b/practicecode.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>Practice</title>
+    </head>
+    <body>
     <table>
         <thread>
         <th>Store #</th>
@@ -35,4 +39,5 @@
             </tr>
         </tfoot>
     </table>
+</body>
 </html>
