--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--Start of Main Content-->
         <div>
             <h2>Our Company</h2>
-            <p>Established in 2001, <em>All Start Cleaning Service</em> has been in business for over 20 years.
+            <p>Established in 2001, <em>All Star Cleaning Service</em> has been in business for over 20 years.
             Our team provides the highest level of cleaning and sanitation services in the North Georgia region.
             Let our team make your life easier and schedule one of our services today!</p>
             <h3>Our Services</h3>
