--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <!--Start of Page Header and Logo-->
         <div class="header">
-        <img src="Images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
+        <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
         <h1>All Star Cleaning Service</h1>
         </div>
         <!--End of Page Header and Logo-->
