--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
                 width : 100px;
                 height : 100px;
                 border-radius: 50%;
+                float : left;
+                width : 100px;
             }
             .header {
                 border-bottom : 2px solid black;
