--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             }
             body {
                 font-family : Arial, Helvetica, sans-serif;
-                background-color : #e3e3bf;
+                background-color : #f0f0c9;
             }
             p {
                 color : black
@@ -29,7 +29,7 @@
     </head>
     <body>
         <!--Start of Page Header and Logo-->
-        <div class="header">
+        <div class="header logo">
         <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
         <h1>All Star Cleaning Service</h1>
         </div>
