undoing the logo class on h1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <!--Start of Page Header and Logo-->
-        <div class="header logo">
+        <div class="header">
         <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
         <h1>All Star Cleaning Service</h1>
         </div>
