--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
             .header {
                 border-bottom : 2px solid black;
                 font-family :Arial, Helvetica, sans-serif;
+                padding-top : 20 px;
             }
             body {
                 font-family : Arial, Helvetica, sans-serif;
                 background-color : #f0f0c9;
             }
             p {
-                color : black
+                color : darkgrey
+            }
+            h1, h2, h3, h4 {
+                color : black;
+                font-size : 24px;
+
             }
 
 
