changing text color and header styles

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
                 background-color : #f0f0c9;
             }
             p {
-                color : darkgrey
+                color : #3b3b3b
             }
-            h1, h2, h3, h4 {
+            h1 {
+                color: black;
+                font-size : 32px;
+            }
+            h2, h3, h4 {
                 color : black;
                 font-size : 24px;
 
