--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             .header {
                 border-bottom : 2px solid black;
                 font-family :Arial, Helvetica, sans-serif;
-                padding-top : 20 px;
-                font-size : 32px;
+                padding-top : 30px;
+                font-size : 24px;
                 color : black;
             }
             body {
@@ -29,7 +29,7 @@
             h2, h3, h4 {
                 color : black;
                 font-size : 24px;
-
+                margin-left : 120px;
             }
 
 
