--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 border-radius: 50%;
                 float : left;
                 width : 100px;
+                padding : 16px;
             }
             .header {
                 border-bottom : 2px solid black;
@@ -22,14 +23,14 @@
             body {
                 font-family : Arial, Helvetica, sans-serif;
                 background-color : #f0f0c9;
+                margin-left : 120px;
             }
             p {
-                color : #3b3b3b
+                color : #3b3b3b;
             }
             h2, h3, h4 {
                 color : black;
                 font-size : 24px;
-                margin-left : 120px;
             }
 
 
