--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 padding-top : 30px;
                 font-size : 24px;
                 color : black;
+                margin-left : 0px;
             }
             body {
                 font-family : Arial, Helvetica, sans-serif;
