updating style type

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>All Star Cleaning Service</title>
         <meta name="description" content="All Star Cleaning Service Services and Hours"/>
         <meta http-equiv="author" content="Kaitlyn Durrence"/>
-        <style>
+        <style type="text/css">
             .logo {
                 width : 100px;
                 height : 100px;
