adding margin to unordered list

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 font-size : 24px;
                 margin-left : 120px;
             }
+            ul {
+                margin-left : 120px;
+            }
 
 
         </style>
