--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             }
             .header {
                 border-bottom : 2px solid black;
-                font-family : Helvetica, Arial, sans-serif
+                font-family :Arial, Helvetica, sans-serif;
                 padding-top : 30px;
                 font-size : 24px;
                 color : black;
             }
             body {
-                font-family : Helvetica, Arial, sans-serif;
+                font-family : Arial, Helvetica, sans-serif;
                 background-color : #f0f0c9;
             }
             p {
