--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 padding : 16px;
             }
             .header {
-                border-bottom : 2px solid black;
+                border-bottom : 2px solid #3045BF;
                 font-family :Arial, Helvetica, sans-serif;
                 padding-top : 30px;
                 font-size : 24px;
@@ -22,7 +22,8 @@
             }
             body {
                 font-family : Arial, Helvetica, sans-serif;
-                background-color : #f0f0c9;
+                background-color : #B3D5F2;
+                margin-left : 120px;
             }
             p {
                 color : #3b3b3b;
@@ -45,6 +46,7 @@
         <div class="header">
         <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
         <h1>All Star Cleaning Service</h1>
+        <hr style="color:#BF9926">
         </div>
         <!--End of Page Header and Logo-->
         <!--Start of Main Content-->
