--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 padding : 16px;
             }
             .header {
-                border-bottom : 2px solid #3045BF;
+                border-bottom : 2px solid #1C2D8C;
                 font-family :Arial, Helvetica, sans-serif;
                 padding-top : 30px;
                 font-size : 24px;
@@ -30,7 +30,7 @@
                 margin-left : 120px;
             }
             h2, h3, h4 {
-                color : black;
+                color : #3045BF;
                 font-size : 24px;
                 margin-left : 120px;
             }
@@ -46,7 +46,7 @@
         <div class="header">
         <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
         <h1>All Star Cleaning Service</h1>
-        <hr style="color:#BF9926">
+        <hr style="color: #F2DC6D">
         </div>
         <!--End of Page Header and Logo-->
         <!--Start of Main Content-->
