--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 font-family : Arial, Helvetica, sans-serif;
                 background-color : #B3D5F2;
                 margin-left : 120px;
+                margin-right :120px;
             }
             p {
                 color : #3b3b3b;
