--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 font-family :Arial, Helvetica, sans-serif;
                 padding-top : 30px;
                 font-size : 24px;
-                color : black;
+                color : #1C2D8C;
             }
             body {
                 font-family : Arial, Helvetica, sans-serif;
@@ -29,6 +29,7 @@
             p {
                 color : #3b3b3b;
                 margin-left : 120px;
+                margin-right: 40px;
             }
             h2, h3, h4 {
                 color : #3045BF;
@@ -47,7 +48,7 @@
         <div class="header">
         <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
         <h1>All Star Cleaning Service</h1>
-        <hr style="color: #F2DC6D">
+        <hr style="color:#F2DC6D">
         </div>
         <!--End of Page Header and Logo-->
         <!--Start of Main Content-->
