--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 padding : 16px;
             }
             .header {
+                border-top: 2px solid #1C2D8C;
                 border-bottom : 2px solid #1C2D8C;
                 font-family :Arial, Helvetica, sans-serif;
                 padding-top : 30px;
@@ -46,9 +47,10 @@
     <body>
         <!--Start of Page Header and Logo-->
         <div class="header">
-        <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
-        <h1>All Star Cleaning Service</h1>
-        <hr style="color:#F2DC6D">
+            <hr style="color:#F2DC6D">
+            <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
+            <h1>All Star Cleaning Service</h1>
+            <hr style="color:#F2DC6D">
         </div>
         <!--End of Page Header and Logo-->
         <!--Start of Main Content-->
@@ -65,6 +67,7 @@
                 <li>Carpet Cleaning</li>
                 <li>Office Cleaning</li>
             </ul></b>
+            <br>
             <p>More services can be found on our <a href="services.html">Services</a> page.</p>
             <h4>Our Hours</h4>
             <p>Our hours are Monday through Saturday, 9 am - 7 pm. 24/7 Emergency Services are available for an additional charge.</p>
