--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <body>
         <!--Start of Page Header and Logo-->
         <div class="header">
-            <hr style="color:#F2DA5E">
+            <hr  style="color:#F2DA5E solid">
             <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
             <h1>All Star Cleaning Service</h1>
-            <hr style="color:#F2DA5E">
+            <hr style="color:#F2DA5E solid">
         </div>
         <!--End of Page Header and Logo-->
         <!--Start of Main Content-->
