--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 font-family :Arial, Helvetica, sans-serif;
                 font-size : 24px;
                 color : #1C2D8C;
+                background-color: white;
             }
             body {
                 font-family : Arial, Helvetica, sans-serif;
