--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 float : left;
                 width : 100px;
                 padding : 16px;
+                padding-bottom : 16px;
             }
             .header {
                 border-top: 2px solid #1C2D8C;
