--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 float : left;
                 width : 100px;
                 padding : 16px;
-                clear : left;
+                clear : right;
             }
             .header {
                 border-top: 2px solid #1C2D8C;
