--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
                 border-radius: 50%;
                 float : left;
                 width : 100px;
-                padding : 16px;
-                clear : right;
+                padding-top : 64px;
+                padding-bottom : 64px;
+                padding-left : 16px;
+                padding-right : 16px;
             }
             .header {
                 border-top: 2px solid #1C2D8C;
