less padding on icon

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 border-radius: 50%;
                 float : left;
                 width : 100px;
-                padding-top : 64px;
-                padding-bottom : 64px;
+                padding-top : 40px;
+                padding-bottom : 40x;
                 padding-left : 16px;
                 padding-right : 16px;
             }
