unordered list color update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Let our team make your life easier and schedule one of our services today!</p>
             <h3>Our Services</h3>
             <p>We offer many high quality services to suit your busy life. Our most popular services are:</p>
-            <ul><b>
+            <ul style="color:#1C2D8C"><b>
                 <li>Day-to-Day Home Cleaning</li>
                 <li>Deep Home Cleaning</li>
                 <li>Carpet Cleaning</li>
