Hosting Milestone 1 (Art Gallery)
IT3203

--- a/index.html
+++ b/index.html
@@ -1,78 +1,123 @@
-<!Docutype html>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>All Star Cleaning Service</title>
-        <meta name="description" content="All Star Cleaning Service Services and Hours"/>
-        <meta http-equiv="author" content="Kaitlyn Durrence"/>
-        <style type="text/css">
-            .logo {
-                width : 100px;
-                height : 100px;
-                border-radius: 50%;
-                float : left;
-                width : 100px;
-                padding-top : 1px;
-                padding-bottom : 2px;
-                padding-left : 16px;
-                padding-right : 16px;
-            }
-            .header {
-                border-top: 2px solid #1C2D8C;
-                border-bottom : 2px solid #1C2D8C;
-                font-family :Arial, Helvetica, sans-serif;
-                font-size : 24px;
-                color : #1C2D8C;
-            }
-            body {
-                font-family : Arial, Helvetica, sans-serif;
-                background-color : #B3D5F2;
-                margin-left : 120px;
-                margin-right :120px;
-            }
-            p {
-                color : #3b3b3b;
-                margin-left : 120px;
-                margin-right: 40px;
-            }
-            h2, h3, h4 {
-                color : #3045BF;
-                font-size : 24px;
-                margin-left : 120px;
-            }
-            ul {
-                margin-left : 120px;
-            }
-
-
-        </style>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+        <title>REAL Art Gallery</title>
+        <meta name="description"
+        content="REAL Art Gallery Information and Art Exhibits"/>
+        <meta name="keywords"
+        content="art gallery, art, exhibits"/>
+        <meta http-equiv="'author"
+        name="Kaitlyn Durrnce"/>
     </head>
     <body>
-        <!--Start of Page Header and Logo-->
+        <!--Beginning of Main Header and Nav Bar-->
         <div class="header">
-            <hr  style="color:#F2DA5E solid">
-            <img src="images/star_icon.jpg" class="logo" alt="A cartoon style star logo" title="Logo"/>
-            <h1>All Star Cleaning Service</h1>
-            <hr style="color:#F2DA5E solid">
+            <a href="index.html"><img id="logo" src="img/Logo.png" alt="REAL Art Gallery Logo"></a>
+            <ul class="nav">
+                <li class="nav" id="home"><a href="index.html">Home</a></li>
+                <li class="nav" id="exhibits"><a href="exhibits.html">Exhibits</a></li>
+                <li class="nav" id="page3"><a href="page3.html">Page3</a></li>
+            </ul>
+        </div> <!--End of Main Header and Nav Bar-->
+        <br>
+        <!-- Beginning of Main Content-->
+        <div> <!-- Showcase Graphic-->
+            <br>
+            <img id="showcase" src="img/gallery.jpg" alt="Our Gallery"/>
+            <hr>
         </div>
-        <!--End of Page Header and Logo-->
-        <!--Start of Main Content-->
-        <div>
-            <h2>Our Company</h2>
-            <p>Established in 2001, <em>All Star Cleaning Service</em> has been in business for over 20 years.
-            Our team provides the highest level of cleaning and sanitation services in the North Georgia region.
-            Let our team make your life easier and schedule one of our services today!</p>
-            <h3>Our Services</h3>
-            <p>We offer many high quality services to suit your busy life. Our most popular services are:</p>
-            <ul style="color:#1C2D8C"><b>
-                <li>Day-to-Day Home Cleaning</li>
-                <li>Deep Home Cleaning</li>
-                <li>Carpet Cleaning</li>
-                <li>Office Cleaning</li>
-            </ul></b>
-            <p>More services can be found on our <a href="services.html">Services</a> page.</p>
-            <h4>Our Hours</h4>
-            <p>Our hours are Monday through Saturday, 9 am - 7 pm. 24/7 Emergency Services are available for an additional charge.</p>
-        </div>
-        <!--End of Main Content-->
+        <br>
+        <div> <!--About Us Section-->
+            <img class="Icon" id="spotlight" src="img/Spotlight.png" alt="Spotlight Icon"/>
+            <h1>About REAL Art Gallery</h1>
+            <p class="body"><b>REAL Art Gallery</b> opened it's door to the Marietta, GA community in 2023. Led by 
+                Creative Director and Gallery Manager Art McArthur, our mission is to 
+                highlight artists within the community and fostering a love of art for the next
+                generation. From established artists to budding students, from canvas paintings 
+                to metal sculptures, we welcome all types of art to our gallery. 
+            </p>
+            <br>
+        </div> <!--End of About Us Section-->
+        <div> <!--Explore Section-->
+            <img class="Icon" src="img/Map.png" alt="Map Icon"/>
+            <h2>Explore</h2>
+            <p class="body">With new exhibits and collections available each month, we hope that you will join us
+                and <b>explore</b> fantastic, innovative artists. REAL Art Gallery is proud to
+                offer artwork from artists of different races, cultures, backgrounds, and abilities.
+                Experiencing new voices and perspectives through the medium of art is one of our greatest
+                passions. 
+            </p>
+            <br>
+        </div> <!--End of Explore Section-->
+        <div> <!--Engage Section-->
+            <img class="Icon" src="img/People.png" alt="People Icon"/>
+            <h2>Engage</h2>
+            <p class="body">Community is the soul of our gallery. Each exhibit, collection, and artist is carefully
+                selected to best capture and <b>engage</b> our community. We aim to bring artists, students,
+                and people togehter to enjoy the wonders of the human experience. By bringing people togehter
+                through art, we are able to enjoy more of what makes us people and neighbors.
+            </p>
+            <br>
+        </div> <!--End of Engage Section-->
+        <br>
+        <div> <!--Exciting News Section-->
+            <img class="Icon" src="img/Mic.png" alt="Microphone Icon"/>
+            <h1>Exciting News</h1>
+            <p>Updates about our upcoming exhibits can be found here:</p>
+                <ul class="news">
+                    <li class="news">Next Exhibit Announced: "Celebrating Color" by Athena Young</li>
+                    <li class="news">Guided Tours Are Now Available on Saturdays 1:00 pm - 3:00 pm</li>
+                    <li class="news">Anouncing New Team Member: Lotus Walker</li>
+                </ul>
+            <p>Stay up to date with everything <b>REAL</b> by signing up for our monthly newsletter. 
+                Find out more <a class="link" href="page3.html">here</a>.</p>
+        </div> <!--End of News Section-->
+        <br>
+        <div class="footer"> <!--Footer and Class Project Note-->
+            <div class="contact_info">
+                <p id="contact_head"><b>REAL Art Gallery</b></p>
+                <p><address>123 Design Lane, Marietta, GA 12345</address></p>
+                <p id="contact_phone">770-123-4567</p>
+                <a class="link" href="mailto:realartgallery@email.com">realartgallery@email.com</a>
+                <p><small>This is for a class project. <a class="link" href="http://it5443.azurewebsites.net">http://it5443.azurewebsites.net</a></small></p>
+            </div>
+            <div class="table">
+                <table class="table">
+                    <tr>
+                        <th>Hours</th>
+                        <td> </td>
+                    </tr>
+                    <tr>
+                        <td>Monday</td>
+                        <td>Closed</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>9:00 am - 5:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td>Closed</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>9:00 am - 5:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>9:00 am - 6:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>9:00 am - 6:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>1:00 pm - 4:00 pm</td>
+                    </tr>
+                </table>
+            </div>
+        </div> <!--End Footer-->
     </body>
 </html>
