Updating with Visual updates

--- a/exhibits.html
+++ b/exhibits.html
@@ -23,17 +23,17 @@
         </div> <!--End of Main Header and Nav Bar-->
         <div> <!--Current Exhibits-->
             <img class="Icon" src="img/Frame.png" alt="Frame Icon"/>
-            <h1>Current Exhibits</h1>
+            <h1 class="red_border">CURRENT EXHIBITS</h1>
         </div>
         <div class="exhibit"> <!--Current Exhibit 1-->
             <div class="ex_info">
                 <p class="ex_title"><b>How Flowers Shape Us</b></p>
-                <p>Artist: Flora Mae</p>
-                <p>A collection of still life works highlighting the most influential flowers in Flora's life 
+                <p class="artist">Artist: Flora Mae</p>
+                <p class="ex_detail">A collection of still life works highlighting the most influential flowers in Flora's life 
                 and the ways that flowers carry and convey emotions. Flora was inspired by the times she was 
                 given flowers after important events.
                 </p>
-                <p><em>March 1, 2023 - April 30, 2023</em></p>
+                <p class="date"><em>March 1, 2023 - April 30, 2023</em></p>
             </div>
             <img class="ex_img" id="flowers" src="img/flowers.jpg" alt="Flowers Still Life Painting"/>
         </div>
@@ -41,12 +41,12 @@
         <div class="exhibit"> <!--Current Exhibit 2-->
             <div class="ex_info">
                 <p class="ex_title"><b>Whiskers and Paws</b></p>
-                <p>Artist: M. Eow</p>
-                <p>Artist Martin Eow captures cat friends in his latest collection, "Whiskers and Paws." Following
+                <p class="artist">Artist: M. Eow</p>
+                <p class="ex_detail">Artist Martin Eow captures cat friends in his latest collection, "Whiskers and Paws." Following
                     the success of his last collection centerd on canine companions, "Bones and Tails", the arist has
                     worked to capture the essence of our favorite furry friends.
                 </p>
-                <p><em>February 1, 2023 - March 31, 2023</em></p>
+                <p class="date"><em>February 1, 2023 - March 31, 2023</em></p>
             </div>
             <img class="ex_img" id="cat" src="img/Cat.png" alt="Cat"/>
         </div>
@@ -54,17 +54,17 @@
         <br>
         <div> <!--Upcoming Exhibits-->
             <img class="Icon" id="coming_soon" src="img/Coming Soon.png" alt="Coming Soon Sign"/>
-            <h1>Upcoming Exhibits</h1>
+            <h1 class="yellow_border">UPCOMING EXHIBITS</h1>
         </div>
         <div class="exhibit" id="upcoming"> <!--Upcoming Exhibit 1-->
             <div class="ex_info">
                 <p class="ex_title"><b>Celebrating Color</b></p>
-                <p>Artist: Athena Young</p>
-                <p>Athena Young debuts in her first solo exhibit: Celebrating Color. Athena finds joy in 
+                <p class="artist">Artist: Athena Young</p>
+                <p class="ex_detail">Athena Young debuts in her first solo exhibit: Celebrating Color. Athena finds joy in 
                 all the color the world has to offer and enjoys bringing many bright colors to the canvas. She
                 creates art to spread joy and happiness to others.
                 </p>
-                <p><em>April 14, 2023 - May 15, 2023</em></p>
+                <p class="date"><em>April 14, 2023 - May 15, 2023</em></p>
             </div>
             <img class="ex_img" id="color" src="img/contemporary.jpg" alt="Colorful Painting"/>
         </div>
