--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <br>
         <div> <!--About Us Section-->
             <img class="Icon" id="spotlight" src="img/Spotlight.png" alt="Spotlight Icon"/>
-            <h1>About REAL Art Gallery</h1>
-            <p class="body"><b>REAL Art Gallery</b> opened it's door to the Marietta, GA community in 2023. Led by 
+            <h1 class="yellow_border">ABOUT REAL ART GALLERY</h1>
+            <p class="body"><b id="yellow_under">REAL Art Gallery</b> opened it's door to the Marietta, GA community in 2023. Led by 
                 Creative Director and Gallery Manager Art McArthur, our mission is to 
                 highlight artists within the community and fostering a love of art for the next
                 generation. From established artists to budding students, from canvas paintings 
@@ -41,9 +41,9 @@
         </div> <!--End of About Us Section-->
         <div> <!--Explore Section-->
             <img class="Icon" src="img/Map.png" alt="Map Icon"/>
-            <h2>Explore</h2>
+            <h2 id="green_border">EXPLORE</h2>
             <p class="body">With new exhibits and collections available each month, we hope that you will join us
-                and <b>explore</b> fantastic, innovative artists. REAL Art Gallery is proud to
+                and <b id="green_under">explore</b> fantastic, innovative artists. REAL Art Gallery is proud to
                 offer artwork from artists of different races, cultures, backgrounds, and abilities.
                 Experiencing new voices and perspectives through the medium of art is one of our greatest
                 passions. 
@@ -52,9 +52,9 @@
         </div> <!--End of Explore Section-->
         <div> <!--Engage Section-->
             <img class="Icon" src="img/People.png" alt="People Icon"/>
-            <h2>Engage</h2>
+            <h2 id="blue_border">ENGAGE</h2>
             <p class="body">Community is the soul of our gallery. Each exhibit, collection, and artist is carefully
-                selected to best capture and <b>engage</b> our community. We aim to bring artists, students,
+                selected to best capture and <b id="blue_under">engage</b> our community. We aim to bring artists, students,
                 and people togehter to enjoy the wonders of the human experience. By bringing people togehter
                 through art, we are able to enjoy more of what makes us people and neighbors.
             </p>
@@ -63,14 +63,14 @@
         <br>
         <div> <!--Exciting News Section-->
             <img class="Icon" src="img/Mic.png" alt="Microphone Icon"/>
-            <h1>Exciting News</h1>
+            <h1 class="red_border">EXCITING NEWS</h1>
             <p>Updates about our upcoming exhibits can be found here:</p>
                 <ul class="news">
                     <li class="news">Next Exhibit Announced: "Celebrating Color" by Athena Young</li>
                     <li class="news">Guided Tours Are Now Available on Saturdays 1:00 pm - 3:00 pm</li>
                     <li class="news">Anouncing New Team Member: Lotus Walker</li>
                 </ul>
-            <p>Stay up to date with everything <b>REAL</b> by signing up for our monthly newsletter. 
+            <p>Stay up to date with everything <b id="red_under">REAL</b> by signing up for our monthly newsletter. 
                 Find out more <a class="link" href="page3.html">here</a>.</p>
         </div> <!--End of News Section-->
         <br>
