updating with final changes

--- a/page3.html
+++ b/page3.html
@@ -22,49 +22,50 @@
             <br>
         </div> <!--End of Main Header and Nav Bar-->
         <p>I will add the contents of this page later in the course.</p>
-    <div class="footer"> <!--Footer and Class Project Note-->
-        <div class="contact_info">
-            <p id="contact_head"><b>REAL Art Gallery</b></p>
-            <p><address>123 Design Lane, Marietta, GA 12345</address></p>
-            <p id="contact_phone">770-123-4567</p>
-            <a class="link" href="mailto:realartgallery@email.com">realartgallery@email.com</a>
-            <p><small>This is for a class project. <a class="link" href="http://it5443.azurewebsites.net">http://it5443.azurewebsites.net</a></small></p>
-        </div>
-        <table class="footer">
-            <tr>
-                <th>Hours</th>
-                <td> </td>
-            </tr>
-            <tr>
-                <td>Monday</td>
-                <td>Closed</td>
-            </tr>
-            <tr>
-                <td>Tuesday</td>
-                <td>9:00 am - 5:00 pm</td>
-            </tr>
-            <tr>
-                <td>Wednesday</td>
-                <td>Closed</td>
-            </tr>
-            <tr>
-                <td>Thursday</td>
-                <td>9:00 am - 5:00 pm</td>
-            </tr>
-            <tr>
-                <td>Friday</td>
-                <td>9:00 am - 6:00 pm</td>
-            </tr>
-            <tr>
-                <td>Saturday</td>
-                <td>9:00 am - 6:00 pm</td>
-            </tr>
-            <tr>
-                <td>Sunday</td>
-                <td>1:00 pm - 4:00 pm</td>
-            </tr>
-        </table>
-        <br>
-    </div> <!--End Footer-->
+        <div class="footer"> <!--Footer and Class Project Note-->
+            <div class="contact_info">
+                <p id="contact_head"><b>REAL Art Gallery</b></p>
+                <p><address>123 Design Lane, Marietta, GA 12345</address></p>
+                <p id="contact_phone">770-123-4567</p>
+                <a class="link" href="mailto:realartgallery@email.com">realartgallery@email.com</a>
+                <p><small>This is for a class project. <a class="link" href="http://it5443.azurewebsites.net">http://it5443.azurewebsites.net</a></small></p>
+            </div>
+            <div class="table">
+                <table class="table">
+                    <tr>
+                        <th>Hours</th>
+                        <td> </td>
+                    </tr>
+                    <tr>
+                        <td>Monday</td>
+                        <td>Closed</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>9:00 am - 5:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td>Closed</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>9:00 am - 5:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>9:00 am - 6:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>9:00 am - 6:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>1:00 pm - 4:00 pm</td>
+                    </tr>
+                </table>
+            </div>
+        </div> <!--End Footer-->
     </body>
 </html>
