Updating with Milestone 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="nav">
                 <li class="nav" id="home"><a href="index.html">Home</a></li>
                 <li class="nav" id="exhibits"><a href="exhibits.html">Exhibits</a></li>
-                <li class="nav" id="page3"><a href="page3.html">Page3</a></li>
+                <li class="nav" id="contactus"><a href="contactus.html">Contact Us</a></li>
             </ul>
         </div> <!--End of Main Header and Nav Bar-->
         <br>
@@ -71,7 +71,7 @@
                     <li class="news">Anouncing New Team Member: Lotus Walker</li>
                 </ul>
             <p>Stay up to date with everything <b id="red_under">REAL</b> by signing up for our monthly newsletter. 
-                Find out more <a class="link" href="page3.html">here</a>.</p>
+                Find out more <a class="link" href="contactus.html">here</a>.</p>
         </div> <!--End of News Section-->
         <br>
         <div class="footer"> <!--Footer and Class Project Note-->
