--- a/exhibits.html
+++ b/exhibits.html
@@ -17,7 +17,7 @@
             <ul class="nav">
                 <li class="nav" id="home"><a href="index.html">Home</a></li>
                 <li class="nav" id="exhibits"><a href="exhibits.html">Exhibits</a></li>
-                <li class="nav" id="page3"><a href="page3.html">Page3</a></li>
+                <li class="nav" id="contactus"><a href="contactus.html">Contact Us</a></li>
             </ul>
             <br>
         </div> <!--End of Main Header and Nav Bar-->
